fix: mobile view

--- a/src/pages/hu/bevezetes.astro
+++ b/src/pages/hu/bevezetes.astro
@@ -9,10 +9,10 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="ERPNext bevezetés és támogatás">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">ERPNext bevezetés</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext bevezetés</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Lépésről lépésre, oktatással és dokumentációval.</h2>
 				<div>
 					<Link href="/hu/kapcsolat">
@@ -20,23 +20,23 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/ERPNext-implementation.jpg" alt="ERPNext bevezetés" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/ERPNext-implementation.jpg" alt="ERPNext bevezetés" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">ERPNext ERP bevezetése a gyakorlatban</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 					Minden üzlet egyforma, legalábbis abban a tekintetben, hogy ezt a játékot profitra játszák. Persze vanna különbségek országok, iparágak és vállalkozások között, de az alapvető folyamatok általában nagyon hasonlóak. Ezért is célszerű egy ERP bevezetése kapcsán a saját folyamatainkat felülvizsgálni, mert lehet, hogy azok nem a legoptimálisabbak. 
 					Sőt, a különböző ERP renszerekből, mint az ERPNext akár az általános, máshol bevált jógyakorlatot is elleshetjük és alkalmazhatjuk. 
 						<br><br>
 					Ha tudunk a meglévő keretekhez igazodni, akkor sokkal könnyebb dolgunk van, de teremészetesen az ERPNext testreszabásásával még jobban tudjuk támogatni a vállalkozások napi működését. 
 						<br><br>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Hogyan dolgozunk?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 					A Monolithon csapata követi az iparági szabályokat és jógyakorlatokat, nem csak a fejlesztések során, hanem a bevezetés támogatás folyamatában is. A teljes kép megismerése érdekében megnézzük, hogy jelenleg hogyan dolgozik az adott vállalkozás aki szeretné az ERPNext rendszert használni. Illetve azt is egyeztetjük hogyan szeretnének a jövőben dolgozni, hiszen ez egy lehetőség, hogy tovább finomítsák működésüket és nem a meglévőt kell digitalizálni. 	
 					<br><br>
 					Ezek alapján nagyvonalakban már látszik, hogy megfelelő szoftver-e az ERPNext az adott szervezet számára vagy sem. Ha nem akkor megnézzük, hogy melyik általunk támogatott másik szoftver lehet megfelelő, vagy olyan, amihez más nyújt támogatást. <br><br>
@@ -47,9 +47,9 @@ changeLanguage("hu");
 					Ezekből következik, hogy nem készítünk előre teljes specifikációt és nem árazzuk azt be, mert túl sok láthatatlan tényező van, amit jobb közösen rugalmasan kezelni. A kockázatokat pénzügyileg is kezeli az általunk nyújtott havidíjas konstrukció, mert nincs egyösszegű nagy beruházás, viszont folyamatosan van eredmény. <br><br>
 					A megállapodott óraszámnál jellemzően az első, bevezetési fázisban jóval több időt fordítunk rá, majd az üzemeltetési fáziban, ha ez kiegyenlítődött, akkor csökkentünk az óraszámon, amelyről napi és havi kimutatás is készül. Ha több támogatásra van szüksége az ügyfélnek, akkor közösen fölfelé is tudjuk módosítani az óraszámot, amely így mindenki számára tervezhető. Nem vész el, az akár később - jellemzően évente szükséges - verzióváltásra is felhasználható. 
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Garanciák</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 					Az ERPNext-tel kapcsolatban meg kell említetnük, hogy a mellett, hogy ingyenes és nyílt forráskódú, tehát megfelelő szakmai partnerek mind segítségére lehetnek a bevezetésben a partnereknek, elérhető egy termékgarancai is. <br><br>
 					Tovább a Monolithon is több partnerrel áll kapcsolatban az esetleges már létező megoldások beszerzéséhez, hogy ne kelljen azokat lefejleszteni, illetve exra fejlesztői kapacitás biztosításához és minőségbiztosításhoz egyaránt használjuk ezt a védőhálót saját magunk és az ügyfeleink érdekében. 
 					<br><br>
