--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -22,7 +22,7 @@ changeLanguage("hu");
 				</div>
 				</div>
         <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
-					<img class="w-full block" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
+					<img class="w-full" src="/images/erpnext-hosting.png" alt="" />
 				</div>
 			</div>
 
