fix: layout fix in mobile view (#30)
* fix: layout fix in mobile view

* fix: path routing

* fix: mobile view

--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -21,8 +21,8 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-        <div class="mt-10 md:mt-0 basis-[38%] overflow-hidden">
-					<img class="w-full block" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/erpnext-hosting.png" alt="" />
 				</div>
 			</div>
 
