--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -15,7 +15,7 @@ changeLanguage("hu");
 					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Monolithon a biztos alap</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext és Frappe magyarul.</h2>
 				<div>
-						<Link href="/contact/" style="primary">Beszéljünk!</Link>
+						<Link href="/hu/kapcsolat/" style="primary">Beszéljünk!</Link>
 				</div>
 				</div>
         <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
