--- a/src/components/pricing.astro
+++ b/src/components/pricing.astro
@@ -1,11 +1,18 @@
 ---
 import { t } from "i18next";
 import Link from "@components/ui/link.astro";
+import Button from "./ui/button.astro";
 
 const { plan } = Astro.props;
 ---
 
-<div class="rounded-md p-8 xl:p-10 ring-1 ring-gray-200 dark:bg-stone-900 dark:ring-gray-700 flex flex-col justify-between">
+<div class="rounded-md p-8 xl:p-10 ring-1 ring-gray-200 dark:bg-stone-900 dark:ring-gray-700 flex flex-col justify-between" x-data="{handleCheckoutButton: function(event) {
+			const paddlePriceId = event.target.dataset.paddlePriceId;
+				Paddle.Checkout.open({
+					priceId: paddlePriceId,
+					quantity: 1
+				});
+}}">
 <div>
 	<div class="flex items-center justify-between gap-x-4">
 		<h3 id="tier-enterprise" class="text-lg font-semibold leading-8 text-gray-900 dark:text-white">{plan.name}</h3>
@@ -33,7 +40,13 @@ const { plan } = Astro.props;
 	</ul>
 </div>
 
-<Link href={t(plan.button.link)} aria-describedby="tier-enterprise" class="block w-full mt-6">
+<Button
+	id="paddle-button"
+	aria-describedby="tier-enterprise"
+	class="block w-full mt-6"
+	data-paddle-priceId={plan.paddlePriceId}
+	@click='handleCheckoutButton($event)'
+>
 	{plan.button.text || "Get Started"}
-</Link>
+</Button>
 </div>
