refactor: updated hu pricing data

--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -19,6 +19,8 @@ const pricingData = [
       text: "Beszéljünk!",
       link: "/hu/kapcsolat",
     },
+    paddlePriceId: "pro_01hg12gak6ha3dhyzzjat6rcdm",
+    quantity: 1,
   },
   {
     name: "Standard",
@@ -29,6 +31,8 @@ const pricingData = [
       text: "Beszéljünk!",
       link: "/hu/kapcsolat",
     },
+    paddlePriceId: "pro_01hg12gak6ha3dhyzzjat6rcdm",
+    quantity: 1,
   },
   {
     name: "Premium",
@@ -39,6 +43,8 @@ const pricingData = [
       text: "Beszéljünk!",
       link: "/hu/kapcsolat",
     },
+    paddlePriceId: "pro_01hg12gak6ha3dhyzzjat6rcdm",
+    quantity: 1,
   },
 ];
 ---
