qms to original & go cardless has paddle plans

--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -3,7 +3,7 @@ import { changeLanguage } from "i18next";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import PricingComponent from "@components/pricing.astro";
+import PricingComponent from "@components/gocardless-pricing.astro";
 import Faq from "@components/faq.astro";
 
 changeLanguage("en");
