refactor: hu page go-cardless

--- a/src/pages/hu/gocardless.astro
+++ b/src/pages/hu/gocardless.astro
@@ -56,10 +56,10 @@ const pricingData = [
     name: "Simple",
     price: "€299",
     popular: false,
-    features: ["Monthly fee/location", "Unlimited user", "Unlimited guest", "Unlimited kiosk", "Unlimited display", "Unlimited traffic*"],
+    features: ["Havidíj/lokáció", "Korlátlan felhasználó", "Korlátlan vendég", "Korlátlan kiosk", "Korlátlan kijelző", "Korlátlan forgalom*"],
     button: {
-      text: "Let's talk!",
-      link: "path_header.primary_button_text",
+      text: "Beszéljünk!",
+      link: "/hu/kapcsolat",
     },
     paddlePriceId: data[2].id,
     quantity: 1,
@@ -68,10 +68,10 @@ const pricingData = [
     name: "Standard",
     price: "€599",
     popular: true,
-    features: ["Simple features plus:", "API access to integrate", "Push notification"],
+    features: ["Minden a Simple csomagból, plusz:", "API hozzáférés integrációkhoz", "Leküldött értesítés (Push notification)"],
     button: {
-      text: "Let's talk!",
-      link: "path_header.primary_button_text",
+      text: "Beszéljünk!",
+      link: "/hu/kapcsolat",
     },
     paddlePriceId: data[1].id,
     quantity: 1,
@@ -80,10 +80,10 @@ const pricingData = [
     name: "Premium",
     price: "Custom",
     popular: false,
-    features: ["Standard features plus:", "Extra resources", "Customization", "Priority support", "Local installation & offline access"],
+    features: ["Minden a Standard csomagból, plusz:", "Extra erőforrás", "Egyedi igények megvalósítása", "Extra támogatás", "Helyi telepítés & Offline hozzáférés"],
     button: {
-      text: "Let's talk!",
-      link: "path_header.primary_button_text",
+      text: "Beszéljünk!",
+      link: "/hu/kapcsolat",
     },
     paddlePriceId: data[0].id,
     quantity: 1,
