--- a/src/pages/gocardless.astro
+++ b/src/pages/gocardless.astro
@@ -98,9 +98,7 @@ const pricingData = [
 					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext GoCardless Bank Integration</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Automatic synchronization of bank transactions.</h2>
 					<div>
-						<Link href="/contact">
-							Let's talk!
-						</Link>
+            <a href="#pricing" class="rounded-md text-sm font-semibold transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 px-4 py-2.5 text-center bg-primaryBlue outline-2 dark:bg-gray-100 hover:opacity-80 dark:hover:bg-white focus-visible:bg-stone-500 dark:focus-visible:bg-gray-100 text-white dark:text-black border-transparent active:outline shadow-sm">Let's talk</a>
 					</div>
 				</div>
         <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
