--- a/src/components/signin.astro
+++ b/src/components/signin.astro
@@ -1,20 +1,21 @@
 ---
 import Button from "@components/ui/button.astro";
 import Link from "@components/ui/link.astro";
+
 ---
 
-<div class="flex min-h-full items-center justify-center px-4 py-12 sm:px-6 lg:px-8">
+<div class="flex min-h-full items-center justify-center px-4 py-12 sm:px-6 lg:px-8 h-[68vh]">
 	<div class="w-full max-w-sm space-y-10">
 		<div>
 			<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900 dark:text-gray-100">Sign in to your account</h2>
 		</div>
-		<form class="space-y-6" action="#" method="POST">
+		<div class="space-y-6" >
 			<div class="relative -space-y-px rounded-md shadow-sm">
 				<div class="pointer-events-none absolute inset-0 z-10 rounded-md ring-1 ring-inset ring-gray-300"></div>
 				<div>
-					<label for="email-address" class="sr-only">Email address</label>
+					<label for="email" class="sr-only">Email address</label>
 					<input
-						id="email-address"
+						id="email"
 						name="email"
 						type="email"
 						autocomplete="email"
@@ -23,40 +24,13 @@ import Link from "@components/ui/link.astro";
 						placeholder="Email address"
 					/>
 				</div>
-				<div>
-					<label for="password" class="sr-only">Password</label>
-					<input
-						id="password"
-						name="password"
-						type="password"
-						autocomplete="current-password"
-						required
-						class="relative block px-4 w-full rounded-b-md border-0 py-1.5 text-gray-900 dark:text-gray-100 dark:bg-stone-950 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-						placeholder="Password"
-					/>
-				</div>
 			</div>
 
-			<div class="flex items-center justify-between">
-				<div class="flex items-center">
-					<input
-						id="remember-me"
-						name="remember-me"
-						type="checkbox"
-						class="h-4 w-4 rounded border-gray-300 text-black focus:text-black accent-stone-950 dark:accent-gray-100"
-					/>
-					<label for="remember-me" class="ml-3 block text-sm leading-6 text-gray-900 dark:text-gray-100">Remember me</label>
-				</div>
-
-				<div class="text-sm leading-6">
-					<Link style="muted" href="#" size="xs" class="text-right">Forgot password?</Link>
-				</div>
-			</div>
 
 			<div>
-				<Button class="w-full" size="sm">Sign in</Button>
+				<Button class="w-full" size="sm" id="loginButton">Sign in</Button>
 			</div>
-		</form>
+		</div>
 
 		<p class="text-center text-sm leading-6 text-gray-500">
 			Not a member?
@@ -64,3 +38,47 @@ import Link from "@components/ui/link.astro";
 		</p>
 	</div>
 </div>
+<script>
+	const button = document.getElementById('loginButton');
+	document.addEventListener('astro:page-load', () => {
+		// const getLocalStorage = localStorage.getItem('email');
+		const getEmailCookie = document.cookie.split('; ').find(row => row.startsWith('email='));
+		if(getEmailCookie){
+				window.location.href = `/dashboard?email=${getEmailCookie.split('=')[1]}`;
+		}
+	});
+	if(button){
+			button.addEventListener('click', async () => {
+					const email = document.getElementById('email');
+					if(email){
+							//@ts-expect-error
+							const emailValue = email.value;
+							var regex = /^[\w-]+(\.[\w-]+)*@([\w-]+\.)+[a-zA-Z]{2,7}$/;
+							if (regex.test(emailValue)) {
+									const response = await fetch(`https://mon8n.fly.dev/webhook/d6e2e60d-c32d-42ab-95c5-9e93ffa71cb1?email=${emailValue}`);
+									const data = await response.json();
+									if(data?.auth === true){
+											window.location.href = `/dashboard?email=${emailValue}`;
+											localStorage.setItem('email', emailValue);
+											document.cookie = `email=${emailValue}; expires= ${addDaysToDate(new Date(), 7)}; path=/`;
+									} else {
+											window.alert('Email not found');
+									}
+							} else {
+									window.alert('Invalid Email');
+							}
+					} else {
+							window.alert('Email not found');
+					}
+					// log value
+			});
+	}
+
+	function addDaysToDate(currentDate, daysToAdd) {
+    daysToAdd = daysToAdd || 0
+    const futureDate = new Date(currentDate)
+    futureDate.setDate(futureDate.getDate() + daysToAdd)
+    return futureDate
+	}
+
+</script>
