--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -55,7 +55,7 @@ const email = Astro.url.searchParams.get('email')! || '';
 						placeholder="Enter subdomain for ERPNext cloud"
 					/>
 			</div>
-    <Button class="mt-4" variant="primary">Create ERPNext Website</Button>
+    <Button class="mt-4" variant="primary" id="fcloud-creation">Create ERPNext Website</Button>
   </section>
   <section>
     <Button class="mt-4" style="link">View Subcription</Button>
@@ -63,3 +63,31 @@ const email = Astro.url.searchParams.get('email')! || '';
 </div>
 	</Container>
 </Layout>
+
+<script>
+
+	const button = document.getElementById('fcloud-creation');
+  const getEmailCookie = document.cookie.split('; ').find(row => row.startsWith('email='));
+  const getCustId = document.cookie.split('; ').find(row => row.startsWith('cust_id='));
+	if(button){
+			button.addEventListener('click', async () => {
+					const subdomain = document.getElementById('subdomain');
+					if(subdomain){
+							//@ts-expect-error
+							const subdomainValue = subdomain.value;
+							var regex = /^[\w-]+(\.[\w-]+)*@([\w-]+\.)+[a-zA-Z]{2,7}$/;
+              const response = await fetch(`https://mon8n.fly.dev/webhook/6bb9f522-a78b-420d-9c2b-63d180b41fad?subdomain=${subdomainValue}&email=${getEmailCookie?.split('=')[1]}&cust_id=${getCustId?.split('=')[1]}`);
+              const data = await response.json();
+              if(Object.keys(data).length === 0 && data.constructor === Object){
+                  window.alert(`Successfull created website ${subdomainValue}.frappecloud.com`);
+              } else {
+                  window.alert('Something went wrong');
+              }
+					} else {
+							window.alert('Please enter subdomain');
+					}
+					// log value
+			});
+	}
+
+</script>
