--- a/src/components/signin.astro
+++ b/src/components/signin.astro
@@ -24,6 +24,19 @@ import Link from "@components/ui/link.astro";
 						placeholder="Email address"
 					/>
 				</div>
+
+				 <div>
+					<label for="password" class="sr-only">Email address</label>
+					<input
+						id="password"
+						name="password"
+						type="password"
+						autocomplete="current-password"
+						required
+						class="relative block px-4 w-full rounded-b-md border-0 py-1.5 text-gray-900 dark:text-gray-100 dark:bg-stone-950 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+						placeholder="Password"
+					/>
+				</div>
 			</div>
 
 
@@ -39,37 +52,58 @@ import Link from "@components/ui/link.astro";
 	</div>
 </div>
 <script>
+
 	const button = document.getElementById('loginButton');
 	document.addEventListener('astro:page-load', () => {
-		// const getLocalStorage = localStorage.getItem('email');
-		const getEmailCookie = document.cookie.split('; ').find(row => row.startsWith('email='));
-		if(getEmailCookie){
-				window.location.href = `/dashboard?email=${getEmailCookie.split('=')[1]}`;
+		const getEmail = localStorage.getItem('email');
+		const getSidCookie = document.cookie.split('; ').find(row => row.startsWith('sid='));
+		if(getSidCookie){
+				window.location.href = `/dashboard?email=${getEmail}`;
 		}
 	});
+
 	if(button){
 			button.addEventListener('click', async () => {
 					const email = document.getElementById('email');
-					if(email){
+					const password = document.getElementById('password');
+					if(email && password){
 							//@ts-expect-error
 							const emailValue = email.value;
+							//@ts-expect-error
+							const passwordValue = password.value;
 							var regex = /^[\w-]+(\.[\w-]+)*@([\w-]+\.)+[a-zA-Z]{2,7}$/;
 							if (regex.test(emailValue)) {
-									const response = await fetch(`https://mon8n.fly.dev/webhook/d6e2e60d-c32d-42ab-95c5-9e93ffa71cb1?email=${emailValue}`);
-									const data = await response.json();
-									if(data?.email === emailValue){
-											window.location.href = `/dashboard?email=${emailValue}`;
-											localStorage.setItem('email', emailValue);
-											document.cookie = `email=${emailValue}; expires= ${addDaysToDate(new Date(), 7)}; path=/`;
-											document.cookie = `cust_id=${data.id}; expires= ${addDaysToDate(new Date(), 7)}; path=/`;
-									} else {
-											window.alert('Email not found');
-									}
+								const formData = new FormData();
+								formData.append('usr', emailValue);
+								formData.append('pwd', passwordValue);
+
+								const response = await fetch("https://mon8n.fly.dev/webhook/2dc5224f-8d7f-4581-a219-cc5a15f84589", {
+									method: "POST",
+									body: formData
+								});
+
+								const data = await response.json();
+
+								if(data?.body.message === "Logged In"){
+										const responseCookie = data.headers["set-cookie"]
+										const getSidToken= responseCookie[0].split(";")
+
+										document.cookie = `${getSidToken}; expires= ${addDaysToDate(new Date(), 7)}; path=/; SameSite=Lax`
+										document.cookie = responseCookie[1]
+										document.cookie = responseCookie[2]
+										document.cookie = responseCookie[3]
+										document.cookie = responseCookie[4]
+										localStorage.setItem("email", emailValue)
+										window.location.href = `/dashboard?email=${emailValue}`;
+								} else {
+										window.alert('Email not found');
+								}
+
 							} else {
 									window.alert('Invalid Email');
 							}
 					} else {
-							window.alert('Email not found');
+							window.alert('Email or password not found');
 					}
 					// log value
 			});
