--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -103,8 +103,21 @@ const email = Astro.url.searchParams.get('email')! || '';
               const response = await fetch(`https://mon8n.fly.dev/webhook/6bb9f522-a78b-420d-9c2b-63d180b41fad?subdomain=${subdomainValue}&email=${getLocalEmail}`);
               const data = await response.json();
               if(Object.keys(data).length === 0 && data.constructor === Object){
+
+                //@ts-expect-error
+                button.disabled = true;
+                const response = await fetch(`https://mon8n.fly.dev/webhook/6bb9f522-a78b-420d-9c2b-63d180b41fad?subdomain=${subdomainValue}&email=${getLocalEmail}`);
+
+                if(response.ok){
+
                   localStorage.setItem("site_id", "true")
                   window.alert(`Successfull created website ${subdomainValue}.frappecloud.com`);
+                  //@ts-expect-error
+                  button.disabled = true;
+                }else{
+                  //@ts-expect-error
+                  button.disabled = false;
+                }
               } else {
                   window.alert('Something went wrong');
               }
