--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -84,46 +84,66 @@ const email = Astro.url.searchParams.get('email')! || '';
 	if(button){
 			button.addEventListener('click', async () => {
 
-        const getSiteId = localStorage.getItem('site_id');
+    const getSiteId = localStorage.getItem('site_id');
 
-          if(getSiteId){
-            //@ts-expect-error
-            button.disabled = true
-            button.textContent = "Site already created"
-            return
-          }
+    if(getSiteId){
+      //@ts-expect-error
+      button.disabled = true
+      button.textContent = "Site already created"
+      return
+    }
 
-					const subdomain = document.getElementById('subdomain');
-					if(subdomain){
-							//@ts-expect-error
-							const subdomainValue = subdomain.value;
-							var regex = /^[\w-]+(\.[\w-]+)*@([\w-]+\.)+[a-zA-Z]{2,7}$/;
-              //@ts-expect-error
-              button.disabled = true;
-              const response = await fetch(`https://mon8n.fly.dev/webhook/6bb9f522-a78b-420d-9c2b-63d180b41fad?subdomain=${subdomainValue}&email=${getLocalEmail}`);
-              const data = await response.json();
-              if(Object.keys(data).length === 0 && data.constructor === Object){
+    const subdomain = document.getElementById('subdomain');
+    if(!getLocalEmail){
+      window.alert("Please login again by deleting cache")
+      return
+    }
+    if (subdomain) {
+    //@ts-expect-error
+    const subdomainValue = subdomain.value;
 
-                //@ts-expect-error
-                button.disabled = true;
-                const response = await fetch(`https://mon8n.fly.dev/webhook/6bb9f522-a78b-420d-9c2b-63d180b41fad?subdomain=${subdomainValue}&email=${getLocalEmail}`);
+    const subdomainRegex = /^[a-z0-9-]+$/;
 
-                if(response.ok){
+    if (subdomainRegex.test(subdomainValue)) {
+      //@ts-expect-error
+      button.disabled = true;
+      const formData = new FormData();
+      formData.append('email', getLocalEmail);
+      formData.append('subdomain', subdomainValue);
 
-                  localStorage.setItem("site_id", "true")
-                  window.alert(`Successfull created website ${subdomainValue}.frappecloud.com`);
-                  //@ts-expect-error
-                  button.disabled = true;
-                }else{
-                  //@ts-expect-error
-                  button.disabled = false;
-                }
-              } else {
-                  window.alert('Something went wrong');
-              }
-					} else {
-							window.alert('Please enter subdomain');
-					}
+      const response = await fetch('https://mon8n.fly.dev/webhook/6bb9f522-a78b-420d-9c2b-63d180b41fad', {
+          method: 'POST',
+          body: formData
+      });
+      const data = await response.json();
+      if (response.ok) {
+        localStorage.setItem('site_id', 'true');
+        window.alert(
+          `Successfull created website ${subdomainValue}.frappecloud.com`
+        );
+        //@ts-expect-error
+        button.disabled = true;
+      } else {
+        //@ts-expect-error
+        button.disabled = false;
+      }
+      // checking response data
+      if (Object.keys(data).length === 0 && data.constructor === Object) {
+        //@ts-expect-error
+        button.disabled = true;
+      } else {
+        window.alert('Something went wrong');
+      }
+    } else {
+      //@ts-expect-error
+      button.disabled = false;
+      window.alert(
+        'For Subdomain Use lowercase characters, numbers and hyphens'
+      );
+    }
+  } else {
+    window.alert('Please enter subdomain');
+  }
 					// log value
 			});
 	}
