--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -8,18 +8,18 @@ import Button from "@components/ui/button.astro";
 import Signin from "@components/signin.astro";
 
 changeLanguage("en");
-const email = Astro.url.searchParams.get('email')! || '';
+const email = Astro.url.searchParams.get("email")! || "";
 
 // console.log(email);
 // let params = new URLSearchParams(document.location.search);
 // let name = params.get("name"); // is the string "Jonathan"
-
 ---
 
 <Layout title="Login" lang="en">
-	<Container>
-<div class="flex min-h-full items-center justify-center px-4 py-12 sm:px-6 lg:px-8 h-[68vh] flex-col" 
-  x-data=`{
+  <Container>
+    <div
+      class="flex min-h-full items-center justify-center px-4 py-12 sm:px-6 lg:px-8 h-[68vh] flex-col"
+      x-data=`{
       email: "",
       getEmail: async function() {
         try{
@@ -34,120 +34,138 @@ const email = Astro.url.searchParams.get('email')! || '';
       isLoading: true,
       error: ''
   }`
-  x-init="getEmail()"
-  >
-  <section class="space-y-8">
-    <div class="max-w-md w-full">
-      <span x-show="isLoading" class="text-4xl font-bold tracking-tight text-gray-500 dark:text-gray-400">Loading...</span>
-      <span x-show="!isLoading" class="text-4xl font-bold tracking-tight text-gray-900 dark:text-white" x-text="email"></span>
-      <span x-show="error" class="text-4xl font-bold tracking-tight text-red-500 dark:text-red-400" x-text="error"></span>
+      x-init="getEmail()"
+    >
+      <section class="space-y-8">
+        <div class="max-w-md w-full">
+          <span
+            x-show="isLoading"
+            class="text-4xl font-bold tracking-tight text-gray-500 dark:text-gray-400"
+            >Loading...</span
+          >
+          <span
+            x-show="!isLoading"
+            class="text-4xl font-bold tracking-tight text-gray-900 dark:text-white"
+            x-text="email"></span>
+          <span
+            x-show="error"
+            class="text-4xl font-bold tracking-tight text-red-500 dark:text-red-400"
+            x-text="error"></span>
+        </div>
+      </section>
+      <section class="space-y-6 flex flex-col justify-center w-2/3 pt-36">
+        <div>
+          <label for="subdomain" class="dark:color-white sr-only"
+            >Enter subdomain for ERPNext cloud</label
+          >
+          <input
+            id="subdomain"
+            name="subdomain"
+            type="url"
+            required
+            class="relative block px-4 w-full rounded-t-md border-0 py-1.5 text-gray-900 dark:text-gray-100 dark:bg-stone-950 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+            placeholder="Enter subdomain for ERPNext cloud"
+          />
+        </div>
+        <Button
+          class="mt-4 disabled:bg-gray-400 dark:disabled:bg-gray-400"
+          variant="primary"
+          id="fcloud-creation"
+        >
+          Create ERPNext Website
+        </Button>
+      </section>
+      <section>
+        <Button class="mt-4" style="link">View Subcription</Button>
+      </section>
     </div>
-  </section>
-  <section class="space-y-6 flex flex-col justify-center w-2/3 pt-36">
-      <div>
-					<label for="subdomain" class="dark:color-white sr-only">Enter subdomain for ERPNext cloud</label>
-					<input
-						id="subdomain"
-						name="subdomain"
-						type="url"
-						required
-						class="relative block px-4 w-full rounded-t-md border-0 py-1.5 text-gray-900 dark:text-gray-100 dark:bg-stone-950 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-						placeholder="Enter subdomain for ERPNext cloud"
-					/>
-			</div>
-    <Button class="mt-4 disabled:bg-gray-400 dark:disabled:bg-gray-400" variant="primary" id="fcloud-creation">Create ERPNext Website</Button>
-  </section>
-  <section>
-    <Button class="mt-4" style="link">View Subcription</Button>
-  </section>
-</div>
-	</Container>
+  </Container>
 </Layout>
 
 <script>
+  const button = document.getElementById("fcloud-creation");
 
-	const button = document.getElementById('fcloud-creation');
+  document.addEventListener("astro:page-load", () => {
+    const getSiteId = localStorage.getItem("site_id");
+    if (button) {
+      if (getSiteId) {
+        //@ts-expect-error
+        button.disabled = true;
+        button.textContent = "Site already created";
+      }
+    }
+  });
 
-	document.addEventListener('astro:page-load', () => {
-		const getSiteId = localStorage.getItem('site_id');
-    if(button){
-      if(getSiteId){
+  const getLocalEmail = localStorage.getItem("email");
+
+  if (button) {
+    button.addEventListener("click", async () => {
+      const getSiteId = localStorage.getItem("site_id");
+
+      if (getSiteId) {
+        //@ts-expect-error
+        button.disabled = true;
+        button.textContent = "Site already created";
+        return;
+      }
+
+      const subdomain = document.getElementById("subdomain");
+      if (!getLocalEmail) {
+        window.alert("Please login again by deleting cache");
+        return;
+      }
+      if (subdomain) {
+        //@ts-expect-error
+        const subdomainValue = subdomain.value;
+
+        const subdomainRegex = /^[a-z0-9-]+$/;
+
+        if (subdomainRegex.test(subdomainValue)) {
           //@ts-expect-error
-          button.disabled = true
-          button.textContent = "Site already created"
-      }
-		}
-	});
+          button.disabled = true;
+          const formData = new FormData();
+          formData.append("email", getLocalEmail);
+          formData.append("subdomain", subdomainValue);
 
-  const getLocalEmail = localStorage.getItem('email');
-
-	if(button){
-			button.addEventListener('click', async () => {
-
-    const getSiteId = localStorage.getItem('site_id');
-
-    if(getSiteId){
-      //@ts-expect-error
-      button.disabled = true
-      button.textContent = "Site already created"
-      return
-    }
-
-    const subdomain = document.getElementById('subdomain');
-    if(!getLocalEmail){
-      window.alert("Please login again by deleting cache")
-      return
-    }
-    if (subdomain) {
-    //@ts-expect-error
-    const subdomainValue = subdomain.value;
-
-    const subdomainRegex = /^[a-z0-9-]+$/;
-
-    if (subdomainRegex.test(subdomainValue)) {
-      //@ts-expect-error
-      button.disabled = true;
-      const formData = new FormData();
-      formData.append('email', getLocalEmail);
-      formData.append('subdomain', subdomainValue);
-
-      const response = await fetch('https://mon8n.fly.dev/webhook/6bb9f522-a78b-420d-9c2b-63d180b41fad', {
-          method: 'POST',
-          body: formData
-      });
-      const data = await response.json();
-      if (response.ok) {
-        localStorage.setItem('site_id', 'true');
-        window.alert(
-          `Successfull created website ${subdomainValue}.frappecloud.com`
-        );
-        //@ts-expect-error
-        button.disabled = true;
+          const response = await fetch(
+            "https://mon8n.fly.dev/webhook/6bb9f522-a78b-420d-9c2b-63d180b41fad",
+            {
+              method: "POST",
+              body: formData,
+            },
+          );
+          const data = await response.json();
+          if (response.ok) {
+            localStorage.setItem("site_id", "true");
+            window.alert(
+              `Successfull created website ${subdomainValue}.frappecloud.com`,
+            );
+            //@ts-expect-error
+            button.disabled = true;
+          } else {
+            //@ts-expect-error
+            button.disabled = false;
+          }
+          // checking response data
+          if (Object.keys(data).length === 0 && data.constructor === Object) {
+            //@ts-expect-error
+            button.disabled = true;
+          } else {
+            window.alert("Something went wrong");
+            //@ts-expect-error
+            button.disabled = false;
+          }
+        } else {
+          //@ts-expect-error
+          button.disabled = false;
+          window.alert(
+            "For Subdomain Use lowercase characters, numbers and hyphens",
+          );
+        }
       } else {
-        //@ts-expect-error
-        button.disabled = false;
+        window.alert("Please enter subdomain");
       }
-      // checking response data
-      if (Object.keys(data).length === 0 && data.constructor === Object) {
-        //@ts-expect-error
-        button.disabled = true;
-      } else {
-        window.alert('Something went wrong');
-        //@ts-expect-error
-        button.disabled = false;
-      }
-    } else {
-      //@ts-expect-error
-      button.disabled = false;
-      window.alert(
-        'For Subdomain Use lowercase characters, numbers and hyphens'
-      );
-    }
-  } else {
-    window.alert('Please enter subdomain');
+      // log value
+    });
   }
-					// log value
-			});
-	}
-
 </script>
