[NEW] demo pages menu item

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -13,6 +13,7 @@ export const menuitems = [
 		title: "ERPNext",
 		children: [
 			{ title: "header.erpnext", path: "path_header.erpnext" },
+			{ title: "header.demo", path: "path_header.demo" },
 			{ title: "header.hosting", path: "path_header.hosting" },
 			{ title: "header.implementation", path: "path_header.implementation" },
 			{ title: "header.invoicing", path: "path_header.invoicing" },
