--- a/src/pages/hu/erpnext-demo.astro
+++ b/src/pages/hu/erpnext-demo.astro
@@ -3,10 +3,10 @@ import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 import Link from "@components/ui/link.astro";
-changeLanguage("en");
+changeLanguage("hu");
 ---
 
-<Layout lang="en" title="ERPNext Demo">
+<Layout lang="hu" title="ERPNext Demó">
 	<Container>
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
