[FIX] change content

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -13,14 +13,6 @@ export const menuitems = [
 		path: "path_footer.monolithon",
 	},
 	{
-		title: "footer.login",
-		path: "path_footer.login",
-	},
-	{
-		title: "footer.support",
-		path: "path_footer.support",
-	},
-	{
 		title: "footer.knowledge",
 		path: "path_footer.knowledge",
 	},
@@ -29,8 +21,8 @@ export const menuitems = [
 		path: "path_footer.status",
 	},
 	{
-		title: "footer.legal",
-		path: "path_footer.legal",
+		title: "footer.privacy-policy",
+		path: "path_footer.privacy-policy",
 	},
 ];
 ---
