--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -6,7 +6,7 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("en");
 ---
 
-<Layout lang="en" title="Legal">
+<Layout lang="en" title="Privacy Policy">
 	<Container class="max-w-3xl mx-auto px-4 py-8">
 		<div class="text-[#192734] dark:text-white">
 			<div>
