--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -142,8 +142,11 @@ changeLanguage("en");
 		<div class="mx-auto max-w-7xl px-6 lg:px-8">
 			<div class="mx-auto max-w-2xl space-y-16 divide-y divide-gray-100 lg:mx-0 lg:max-w-none">
 				<div class="md:flex">
-					<div>
-						<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Monlithon Support:</h2>
+					<div><h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Are you already a customer?</h2>
+						<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200"><a href="https://support.monolithon.com">Visit support.monolithon.com now!</a></br>
+						</br>
+							</p>
+						<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Presales question?</h2>
 						<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Tibor Gede - Administrator</br>
 							Budapest</br>
 							Hungary</br>
