--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -143,7 +143,11 @@ changeLanguage("hu");
 				<div class="mx-auto max-w-2xl space-y-16 divide-y divide-gray-100 lg:mx-0 lg:max-w-none">
 					<div class="md:flex">
 						<div>
-							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Ügyfélszolgálat:</h2>
+							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Szerződéses ügyfelünk?</h2>
+							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200"><a href="https://support.monolithon.com">Üzenjen a support.monolithon.com-on!</a></br></br>
+							</p>
+
+							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Vásárlás előtti kérdés?</h2>
 							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Gede Tibor - Kapcsolattartó</br>
 							Budapest</br>
 							Magyarország</br>
