--- a/src/pages/hu/privacy-policy.astro
+++ b/src/pages/hu/privacy-policy.astro
@@ -6,7 +6,7 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="hu" title="jogok">
+<Layout lang="hu" title="Adatvédelem">
 	<Container class="max-w-3xl mx-auto px-4 py-8">
 		<div class="text-[#192734] dark:text-white">
 			<div>
