[NEW] add new pages

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -24,6 +24,14 @@ export const menuitems = [
 		title: "footer.privacy-policy",
 		path: "path_footer.privacy-policy",
 	},
+	{
+		title: "footer.refund-policy",
+		path: "path_footer.refund-policy",
+	},
+	{
+		title: "footer.terms-conditions",
+		path: "path_footer.terms-conditions",
+	},
 ];
 ---
 
