--- a/src/pages/terms-conditions.astro
+++ b/src/pages/terms-conditions.astro
@@ -16,13 +16,13 @@ changeLanguage("en");
 
 <p>&nbsp;</p>
 
-<p><span style="color:#595959; font-family:Arial; font-size:11.0pt">We are Moln&aacute;r Margit Rita (&quot;<strong>Company</strong>,&quot; &quot;<strong>we</strong>,&quot; &quot;<strong>us</strong>,&quot; &quot;<strong>our</strong>&quot;)<span style="color:#595959; font-size:11.0pt"><span style="color:#595959; font-size:11.0pt"><span style="color:#595959; font-size:11.0pt">, a company registered in <span style="color:#595959; font-size:11.0pt"><span style="color:#595959; font-size:11.0pt">Hungary</span></span> at Kelemen B&eacute;la u. 2. 1. em. 4. </span></span>, Sz&eacute;kesfeh&eacute;rv&aacute;r</span></span><span style="font-size:15px"><span style="font-size:15px"><span style="color:#595959"> 8000</span></span></span>. Our VAT number is 76953666-1-27.</p>
+<p><span style="color:#595959; font-family:Arial; font-size:11.0pt">We are Margit Rita Molnár (&quot;<strong>Company</strong>,&quot; &quot;<strong>we</strong>,&quot; &quot;<strong>us</strong>,&quot; &quot;<strong>our</strong>&quot;)<span style="color:#595959; font-size:11.0pt"><span style="color:#595959; font-size:11.0pt"><span style="color:#595959; font-size:11.0pt">, a company registered in <span style="color:#595959; font-size:11.0pt"><span style="color:#595959; font-size:11.0pt">Hungary</span></span> at Kelemen B&eacute;la u. 2. 1. em. 4. </span></span>, Sz&eacute;kesfeh&eacute;rv&aacute;r</span></span><span style="font-size:15px"><span style="font-size:15px"><span style="color:#595959"> 8000</span></span></span>. Our VAT number is 76953666-1-27.</p>
 
 <p><span style="color:#595959; font-family:Arial; font-size:11.0pt">We operate the website <span style="color:#003afa"><a href="http://www.monolihon.com" target="_blank">http://www.monolihon.com</a></span> (the &quot;<strong>Site</strong>&quot;), as well as any other related products and services that refer or link to these legal terms (the &quot;<strong>Legal Terms</strong>&quot;) (collectively, the &quot;<strong>Services</strong>&quot;).</span></p>
 
 <p><span style="color:#595959; font-family:Arial; font-size:11.0pt">You can contact us by phone at +36307192418, email at support.monolithon.com, or by mail to Kelemen B&eacute;la u. 2. 1. em. 4. , Sz&eacute;kesfeh&eacute;rv&aacute;r 8000,&nbsp;Hungary.</span></p>
 
-<p><span style="color:#595959; font-family:Arial; font-size:11.0pt">These Legal Terms constitute a legally binding agreement made between you, whether personally or on behalf of an entity (&quot;<strong>you</strong>&quot;), and Moln&aacute;r Margit Rita, concerning your access to and use of the Services. You agree that by accessing the Services, you have read, understood, and agreed to be bound by all of these Legal Terms. IF YOU DO NOT AGREE WITH ALL OF THESE LEGAL TERMS, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SERVICES AND YOU MUST DISCONTINUE USE IMMEDIATELY.</span></p>
+<p><span style="color:#595959; font-family:Arial; font-size:11.0pt">These Legal Terms constitute a legally binding agreement made between you, whether personally or on behalf of an entity (&quot;<strong>you</strong>&quot;), and Margit Rita Molnár, concerning your access to and use of the Services. You agree that by accessing the Services, you have read, understood, and agreed to be bound by all of these Legal Terms. IF YOU DO NOT AGREE WITH ALL OF THESE LEGAL TERMS, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SERVICES AND YOU MUST DISCONTINUE USE IMMEDIATELY.</span></p>
 
 <p><span style="color:#595959; font-family:Arial; font-size:11.0pt">Supplemental terms and conditions or documents that may be posted on the Services from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Legal Terms from time to time. We will alert you about any changes by updating the &quot;Last updated&quot; date of these Legal Terms, and you waive any right to receive specific notice of each such change. It is your responsibility to periodically review these Legal Terms to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Legal Terms by your continued use of the Services after the date such revised Legal Terms are posted.</span></p>
 
@@ -341,7 +341,7 @@ changeLanguage("en");
 
 <p><strong><span style="font-size:19px"><strong><span style="font-size:19px"><strong><span style="font-family:Arial; font-size:19px"><strong><span style="font-family:Arial; font-size:19px">16.</span></strong></span></strong></span>&nbsp;</strong>GOVERNING LAW</span></strong></p>
 
-<p><span style="color:#595959; font-size:11pt">These Legal Terms are governed by and interpreted following the laws of Hungary, and the use of the United Nations Convention of Contracts for the International Sales of Goods is expressly excluded. If your habitual residence is in the EU, and you are a consumer, you additionally possess the protection provided to you by obligatory provisions of the law in your country to residence. Moln&aacute;r Margit Rita and yourself both agree to submit to the non-exclusive jurisdiction of the courts of __________, which means that you may make a claim to defend your consumer protection rights in regards to these Legal Terms in Hungary, or in the EU country in which you reside.</span></p>
+<p><span style="color:#595959; font-size:11pt">These Legal Terms are governed by and interpreted following the laws of Hungary, and the use of the United Nations Convention of Contracts for the International Sales of Goods is expressly excluded. If your habitual residence is in the EU, and you are a consumer, you additionally possess the protection provided to you by obligatory provisions of the law in your country to residence. Margit Rita Molnár and yourself both agree to submit to the non-exclusive jurisdiction of the courts of __________, which means that you may make a claim to defend your consumer protection rights in regards to these Legal Terms in Hungary, or in the EU country in which you reside.</span></p>
 
 <p>&nbsp;</p>
 
@@ -429,7 +429,7 @@ changeLanguage("en");
 
 <p>&nbsp;</p>
 
-<p><span style="font-size:15px"><span style="color:#595959"><strong>Moln&aacute;r Margit Rita</strong></span></span></p>
+<p><span style="font-size:15px"><span style="color:#595959"><strong>Margit Rita Molnár</strong></span></span></p>
 
 <p><span style="font-size:15px"><span style="color:#595959; font-family:Arial"><strong>Kelemen B&eacute;la u. 2. 1. em. 4. </strong></span></span></p>
 
